syntax = "proto3";
package proto.common;

message row {
  repeated column columns = 1;
}

enum DataType {
  unknown = 0;
  i32 = 1;
  i64 = 2;
  f64 = 3;
  str = 4;
}

message column {
  uint32 id = 1;
  string field = 2;
  DataType dt = 3;

  int32 i32_val = 4;
  int64 i64_val = 5;
  double f64_val = 6;
  string str_val = 7;
}